 (Format: Year/Month/Day)
Changes for 1.0rc3:
*07/02/05:
   * Made some changes to the way autogrouping in the apps file works (Mark)
     - Introduced new syntax [group] (workspace) to group new windows only with
       windows on the current workspace
     - Fixed an unreported bug with grouping windows on multiple screens
     - Groups are now associated with clients rather than windows, so they
       will be more robust when attaching or detaching tabs and when restarting
       fluxbox
     Remember.cc/hh
*07/02/04:
   * Layer wasn't set properly on remembered windows, and the layer menu
     wasn't getting updated properly, bugs #1535304, #1572683, #1646740
     (Mark)
     Window.cc/hh LayerMenu.cc/hh
   * Clicking on the edge of a button didn't work, bugs #1060891, #1517747
     (Mark)
     FbTk/Button.cc
*07/02/02:
   * Reverted patch from svn 4684, allowing transparency in window buttons,
     until we get it working with titlebar transparency, since the old buggy
     behavior at least didn't break settings already in use (Mark)
     FbWinFrame.cc WinButton.cc/hh
   * Update window transparency immediately when using pseudotransparency,
     also introduced new key command: SetAlpha [[+-]<int> [[+-]<int>]] (Mark)
     - with no arguments, returns the focused window to default settings
     - with one argument, changes both focused and unfocused settings the same
       way
     - with two arguments, the first changes the focused alpha, and the second
       changes the unfocused alpha
     E.g. SetAlpha 127 +5 will set the focused alpha to 127 and increment the
     unfocused alpha by 5 (until it reaches 255)
     FbWinFrame.cc FbCommandFactory.cc CurrentWindowCmd.cc/hh
*07/01/26:
   * Fix default workspace names, and don't show empty menus (Mark)
     Workspace.cc FbTk/Menu.cc
   * Opening a window on a different workspace with Focus New Windows enabled
     should focus the window when you get to that workspace -- as a free bonus,