@@ -24,3 +24,4 @@
 #include "WindowCmd.hh"
 
 FluxboxWindow *WindowCmd_base::s_win = 0;
+WinClient *WindowCmd_base::s_client = 0;
